<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="str_app_name">크레센도</string>
    <string name="str_action_settings">세팅</string>
    <string name="str_manage_plan">목표 관리</string>
    <string name="str_view_current_status">현 상태 보기</string>
    <string name="str_manage_friends_list">친구 관리</string>
    <string name="str_manage_widget">위젯 관리</string>
    <string name="str_manage_settings">환경 설정</string>
    <string name="str_title_activity_plans_list">PlansListActivity</string>
    <string name="str_planEditor_title">제목</string>
    <string name="str_planEditor_startdate">시작일</string>
    <string name="str_planEditor_endDate">완료일</string>
    <string name="str_planEditor_initValue">현재값</string>
    <string name="str_planEditor_targetValue">목표값</string>
    <string name="str_planEditor_repeatPeriod">반복주기</string>
    <string name="str_monday">월</string>
    <string name="str_tuesday">화</string>
    <string name="str_wednesday">수</string>
    <string name="str_thursday">목</string>
    <string name="str_friday">금</string>
    <string name="str_saturday">토</string>
    <string name="str_sunday">일</string>
    <string name="str_alarm_time">알람 시간</string>
    <string name="str_ID">아이디</string>
    <string name="str_PW">비밀번호</string>
    <string name="str_curPW">기존 비밀번호</string>
    <string name="str_newPW">신규 비밀번호</string>
    <string name="str_confirmPW">신규 비밀번호 확인</string>
    <string name="str_PhoneNumber">전화번호</string>
    <string name="str_birthday">생일</string>
    <string name="str_newregister">회원가입</string>
    <string name="str_save">저장</string>
    <string name="str_newPlan">신규 플랜 추가</string>
    <string name="str_login">로그인</string>
    <string name="str_title_welcome">환영합니다!</string>
    <string name="str_register">등록</string>
    <string name="str_change">변경</string>
    <string name="str_add_new_friend">새로운 친구 추가</string>
    <string name="str_input_register_information">회원 가입에 필요한 정보를 입력해 주세요.</string>
    <string name="str_managing_plans">등록한 목표를 관리합니다.</string>
    <string name="str_addnewplan">새로운 목표를 등록합니다.</string>
    <string name="str_modify_plan">목표를 수정합니다.</string>
    <string name="str_add_newfriend">관심 목록에 추가할 친구를 선택합니다.</string>
    <string name="str_managing_friend">관심 친구 목록을 관리합니다.</string>
    <string name="str_input_value">현재 측정값을 입력합니다.</string>
    <string name="str_changing_password">비밀 번호를 변경합니다.</string>
    <string name="str_settings_widget">내 위젯 표시</string>
    <string name="str_settings_friendwidget">친구 위젯 표시</string>
    <string name="str_settings_alarm">알림 효과</string>
    <string name="str_settings_change_pw">비밀번호 변경</string>
    <string name="str_settings_help">도움말</string>
    <string name="str_settings_logout">로그아웃</string>
    <string name="str_settings_title">환경을 설정합니다.</string>
    <string name="str_plan_context_menu">목표 관리</string>
    <string name="str_delete_plan">삭제</string>
    <string name="str_modify_plan2">수정</string>
    <string name="str_set_default_plan">메인 목표로 설정</string>
    <string name="str_delete">삭제</string>
    <string name="str_cancel">취소</string>
    <string name="str_delete_friend">친구 삭제</string>
    <string name="str_show_status">현재까지 목표 진행 상황입니다.</string>
    <string name="str_enter_id">이메일 주소를 입력해주세요.</string>
    <string name="str_enter_pw">비밀번호를 입력해주세요.</string>
    <string name="str_password_lenght">7자리 이상 입력해주세요.</string>
    <string name="str_finish_app">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="str_current_val">현재 측정값</string>
    <string name="str_manage_friend">친구 관리</string>
    
    <string name="str_success">정상적으로 처리되었습니다.</string>
    <string name="str_duplicated_user">이미 등록된 아이디 입니다. 다른 아이디로 등록하세요</string>
    <string name="str_invalid_password">비밀번호가 틀립니다. 다시 입력해주세요.</string>
    <string name="str_unresigered_user">등록되지 않은 아이디 입니다. 먼저 등록해주세요.</string>
    <string name="str_network_error">서버와 통신이 어렵습니다. 잠시 후 다시 시도해 주세요.</string>
    
    <string name="str_avataname">아바타 이름</string>
    <string name="str_avattype">아바타 타입</string>
    <string name="str_avatimage">아바타 이미지</string>
    <string name="str_setAvata">바탕화면에 표시될 아바타를 지정합니다.</string>
    <string name="str_setmyAvata">아바타로 지정</string>
    
    <string name="str_plantype_diet">다이어트</string>
    <string name="str_plantype_reading">독서</string>

    <string name="str_tooshort_password">비밀번호가 너무 짧습니다. 7자리 이상 입력해주세요.</string>
    <string name="str_change_password_relogin">비밀번호가 변경되어 재 실행시 다시 로그인해야합니다.</string>
    
    <string name="str_plantype">목표 종류</string>
    <string name="str_input_currentvalue">현재값 입력</string>
    
    <string name="str_err_cantfindface">얼굴을 찾지 못하였습니다</string>
    <string name="str_err_invalidid">아이디는 이메일 타입입니다. 다시 입력해 주세요</string>
    <string name="str_err_shortpw">비밀 번호는 7자 이상 입력해 주세요</string>
    <string name="str_err_invalidtitle">제목은 3자 이상에 의미있는 단어를 사용해 입력해 주세요</string>
    <string name="str_err_invaliddate">날짜를 제대로 입력해 주세요</string>
    
    <string name="str_err_invaliddayofweek">진행 정도를 확인할 요일을 입력해 주세요</string>
    <string name="str_err_defaultplan">메인 목표는 바로 지울 수 없습니다. 먼저 메인 목표를 변경해 주세요</string>
    <string name="str_err_invalidphonenumber">전화번호가 이상합니다. 확인해 주세요</string>
    <string name="str_planview">목표의 세부 사항을 확인합니다.</string>
    <string name="str_err_setdefaultplan">먼저 기본 목표를 등록하여 주세요</string>

</resources>