<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin_double"
    android:layout_marginRight="@dimen/activity_horizontal_margin_double"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_plans_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/str_manage_plan" />

    <Button
        android:id="@+id/main_view_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_view_current_status" />

    <Button
        android:id="@+id/main_friends_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_manage_friends_list" />

    <Button
        android:id="@+id/main_manage_widget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_manage_widget" />

    <Button
        android:id="@+id/main_manage_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_manage_settings" />

</LinearLayout>