<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="input plan name" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_startdate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_endDate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewInitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_initValue"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editInitValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewTargetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_targetValue"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTargetValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_planEditor_repeatPeriod"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <ToggleButton
                android:id="@+id/button_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_monday"
                android:textOn="@string/str_monday" />

            <ToggleButton
                android:id="@+id/button_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_tuesday"
                android:textOn="@string/str_tuesday" />

            <ToggleButton
                android:id="@+id/button_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_wednesday"
                android:textOn="@string/str_wednesday" />

            <ToggleButton
                android:id="@+id/button_thur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_thursday"
                android:textOn="@string/str_thursday" />

            <ToggleButton
                android:id="@+id/button_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_friday"
                android:textOn="@string/str_friday" />

            <ToggleButton
                android:id="@+id/button_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_saturday"
                android:textOn="@string/str_saturday" />

            <ToggleButton
                android:id="@+id/button_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dip"
                android:textOff="@string/str_sunday"
                android:textOn="@string/str_sunday" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/textViewAlarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_alarm_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editAlarmTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:ems="10" />

        <Button
            android:id="@+id/planeditor_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/str_save" />
    </LinearLayout>
     </ScrollView>
</FrameLayout>