<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:divider="#000000"
    android:dividerHeight="2dp"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end" >

	   <Switch
	       android:id="@+id/settings_setwidget"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_margin="@dimen/activity_vertical_margin"
	       android:text="@string/str_settings_widget"
	       android:textAppearance="?android:attr/textAppearance"
	       android:textColor="#000000"
	       tools:targetApi="14" />
	   
	   <Switch
	       android:id="@+id/settings_setfriendwidget"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_margin="@dimen/activity_vertical_margin"
	       android:text="@string/str_settings_friendwidget"
	       android:textAppearance="?android:attr/textAppearance"
	       android:textColor="#000000"
	       tools:targetApi="14" />
	
	    <Switch
	        android:id="@+id/settings_setalarm"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/activity_vertical_margin"
	        android:text="@string/str_settings_alarm"
	        android:textAppearance="?android:attr/textAppearance"
	        android:textColor="#000000"
	        tools:targetApi="14" />
	
	
	
	
	<Button
	    android:id="@+id/setttings_changepw"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_vertical_margin"
	    android:background="@android:color/transparent"
	    android:text="@string/str_settings_change_pw"
	    android:gravity="start"
	    android:textAppearance="?android:attr/textAppearance" />
	
	<Button
	    android:id="@+id/settings_help"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_vertical_margin"
	    android:background="@android:color/transparent"
	    android:text="@string/str_settings_help"
	    android:gravity="start"
	    android:textAppearance="?android:attr/textAppearance" />



</LinearLayout>