<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/avatar" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_avataname"
        android:textAppearance="?android:attr/textAppearance" />

    <EditText
        android:id="@+id/avataName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_avattype"
        android:textAppearance="?android:attr/textAppearance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avataIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/list_icon_max_size"
            android:maxWidth="@dimen/list_icon_max_size"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_diet" />

        <EditText
            android:id="@+id/avataType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:editable="false"
            android:clickable="false"
            android:focusable="false"
            android:text=""
            android:textAppearance="?android:attr/textAppearance" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_avatimage"
        android:textAppearance="?android:attr/textAppearance" />

    <ImageView
        android:id="@+id/avataImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:fadingEdge="horizontal|vertical"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:src="@drawable/man_shop" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_save" 
        android:layout_gravity="right"/>
    
    <TextView
        android:id="@+id/dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance" />

</LinearLayout>
</RelativeLayout>